[package]
name = "raes"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "GPLv2"
description = "Constant time aes implimentation (originally from Linux)"

[dependencies]
index-fixed = "0.1"

[dev-dependencies]
openssl = "*"
rand = "*"
quickcheck = "*"
hex = "*"
fmt-extra = "*"
