[package]
name = "aesti"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "GPL-2.0"
description = "Constant/fixed/invariant time aes implimentation (originally from Linux)"
keywords = [ "crypto", "aes", "no_std"]
include = [ "Cargo.toml", "**/*.rs"]
repository = "https://github.com/jmesmon/aesti"
documentation = "https://docs.rs/aesti"

[dependencies]
index-fixed = "0.1"

[dev-dependencies]
openssl = "0.9"
quickcheck = "0.4"
hex = "0.2"
fmt-extra = "0.1"
